updated settings and window scroll for mobile

--- a/webx11/settings.json
+++ b/webx11/settings.json
@@ -6,5 +6,8 @@
   "max_width": 3440,
   "max_height": 1440,
   "max_fps": 30,
-  "can_start_executables": false
+  "can_start_executables": false,
+  "webtransport_host": "localhost",
+  "host": "127.0.0.1",
+  "cors_unsafe_allow_all": false
 }
